add script for current year

--- a/lab.html
+++ b/lab.html
@@ -177,8 +177,9 @@
         </a>
       </li>
     </ul>
-    <p class="copyright">© Robert James 2025</p>
+    <p class="copyright">©Robert James</p>
   </footer>
+  <script src="scripts/copyright.js" defer></script>
   <script src="scripts/lab-analytics.js" type="module" defer></script>
   <script src="scripts/register-sw.js" defer></script>
 </body>
