--- a/resume.html
+++ b/resume.html
@@ -287,8 +287,9 @@
         </a>
       </li>
     </ul>
-    <p class="copyright">© Robert James</p>
+    <p class="copyright">©Robert James</p>
   </footer>
+  <script src="scripts/copyright.js" defer></script>
   <script src="scripts/register-sw.js" defer></script>
   <script src="scripts/analytics.js" type="module" defer></script>
 </body>
