--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
         </ul>
         <p class="copyright">©Robert James</p>
     </footer>
+    <script src="scripts/copyright.js" defer></script>
     <script src="scripts/analytics-loader.js" defer></script>
     <script src="scripts/register-sw.js" defer></script>
     <script src="scripts/analytics.js" type="module" defer></script>
