sec: update csp -> inline styles & update all requests to https

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="Description"
         content="Robert James - A UX Engineer who designs and builds digital experiences and products" />
     <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; script-src 'self' https://www.googletagmanager.com https://static.cloudflareinsights.com 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com data:; img-src 'self' https://assets.codepen.io data:; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://www.google-analytics.com https://cloudflareinsights.com https://static.cloudflareinsights.com; object-src 'none'; frame-src 'self'; base-uri 'self';" />
+        content="default-src 'self'; script-src 'self' https://www.googletagmanager.com https://static.cloudflareinsights.com 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com data:; img-src 'self' https://assets.codepen.io data:; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://www.google-analytics.com https://cloudflareinsights.com https://static.cloudflareinsights.com; object-src 'none'; frame-src 'self'; base-uri 'self'; upgrade-insecure-requests;" />
     <meta name="referrer" content="strict-origin-when-cross-origin" />
     <title>Robert James</title>
     <meta property="og:title" content="Robert James" />
@@ -225,7 +225,8 @@
                 </a>
             </li>
             <li class="footer-menu--item" role="listitem">
-                <a href="https://www.linkedin.com/in/robertmajames" class="linkedIn" target="_blank" rel="noopener">
+                <a href="https://www.linkedin.com/in/robertmajames" class="linkedIn" target="_blank"
+                    rel="noopener noreferrer">
                     <svg id="icon-linkedIn" role="img" aria-label="LinkedIn Icon" style="width: 1.5rem; height: 1.5rem"
                         viewbox="0 0 24 24">
                         <title>Linkedin icon</title>
@@ -235,7 +236,7 @@
                 </a>
             </li>
             <li class="footer-menu--item" role="listitem">
-                <a href="https://github.com/rmjames" class="github" target="_blank" rel="noopener">
+                <a href="https://github.com/rmjames" class="github" target="_blank" rel="noopener noreferrer">
                     <svg id="icon-github" role="img" aria-label="Github Icon" style="width: 1.5rem; height: 1.5rem"
                         viewbox="0 0 24 24">
                         <title>Github icon</title>
@@ -245,7 +246,7 @@
                 </a>
             </li>
             <li class="footer-menu--item" role="listitem">
-                <a href="https://codepen.io/rmjames/" class="codepen" target="_blank" rel="noopener">
+                <a href="https://codepen.io/rmjames/" class="codepen" target="_blank" rel="noopener noreferrer">
                     <svg id="icon-codepen" role="img" aria-label="Codepen Icon" style="width: 1.5rem; height: 1.5rem"
                         viewbox="0 0 512 512">
                         <title>Codepen icon</title>
@@ -255,7 +256,7 @@
                 </a>
             </li>
             <li class="footer-menu--item" role="listitem">
-                <a href="https://twitter.com/bkrjames" class="twitter" target="_blank" rel="noopener">
+                <a href="https://twitter.com/bkrjames" class="twitter" target="_blank" rel="noopener noreferrer">
                     <svg id="icon-twitter" role="img" aria-label="Twitter Icon" style="width: 1.5rem; height: 1.5rem"
                         viewbox="0 0 24 24">
                         <title>Twitter icon</title>
