update csp to remove inline styles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="Description"
         content="Robert James - A UX Engineer who designs and builds digital experiences and products" />
     <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; script-src 'self' https://www.googletagmanager.com https://static.cloudflareinsights.com 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com data:; img-src 'self' https://assets.codepen.io data:; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://www.google-analytics.com https://cloudflareinsights.com https://static.cloudflareinsights.com; object-src 'none'; frame-src 'self'; base-uri 'self'; upgrade-insecure-requests;" />
+        content="default-src 'self'; script-src 'self' https://www.googletagmanager.com https://static.cloudflareinsights.com 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com data:; img-src 'self' https://assets.codepen.io data:; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://www.google-analytics.com https://cloudflareinsights.com https://static.cloudflareinsights.com; object-src 'none'; frame-src 'self'; base-uri 'self'; upgrade-insecure-requests;" />
     <meta name="referrer" content="strict-origin-when-cross-origin" />
     <title>Robert James</title>
     <meta property="og:title" content="Robert James" />
@@ -107,8 +107,7 @@
             </p>
             <p class="about-item">
                 If you'd like to discuss a project, review some <a interestfor="link-lab-popover"
-                    style="anchor-name: --lab-link" class="link-contact
-                    lab" href="lab.html" data-analytics-link="Work">work</a> or just
+                    class="link-contact lab lab-link-anchor" href="lab.html" data-analytics-link="Work">work</a> or just
                 say hello, feel free
                 to
                 <a aria-label="Send email to contact Robert James" id="contact" class="link-contact"
@@ -228,7 +227,7 @@
             <li class="footer-menu--item" role="listitem">
                 <a href="https://www.linkedin.com/in/robertmajames" class="linkedIn" target="_blank"
                     rel="noopener noreferrer">
-                    <svg id="icon-linkedIn" role="img" aria-label="LinkedIn Icon" style="width: 1.5rem; height: 1.5rem"
+                    <svg id="icon-linkedIn" role="img" aria-label="LinkedIn Icon" width="24" height="24"
                         viewbox="0 0 24 24">
                         <title>Linkedin icon</title>
                         <use href="#linkedIn"></use>
@@ -238,7 +237,7 @@
             </li>
             <li class="footer-menu--item" role="listitem">
                 <a href="https://github.com/rmjames" class="github" target="_blank" rel="noopener noreferrer">
-                    <svg id="icon-github" role="img" aria-label="Github Icon" style="width: 1.5rem; height: 1.5rem"
+                    <svg id="icon-github" role="img" aria-label="Github Icon" width="24" height="24"
                         viewbox="0 0 24 24">
                         <title>Github icon</title>
                         <use href="#github"></use>
@@ -248,7 +247,7 @@
             </li>
             <li class="footer-menu--item" role="listitem">
                 <a href="https://codepen.io/rmjames/" class="codepen" target="_blank" rel="noopener noreferrer">
-                    <svg id="icon-codepen" role="img" aria-label="Codepen Icon" style="width: 1.5rem; height: 1.5rem"
+                    <svg id="icon-codepen" role="img" aria-label="Codepen Icon" width="24" height="24"
                         viewbox="0 0 512 512">
                         <title>Codepen icon</title>
                         <use href="#codepen" transform="scale(1.2) translate(-20,-25)"></use>
@@ -258,7 +257,7 @@
             </li>
             <li class="footer-menu--item" role="listitem">
                 <a href="https://twitter.com/bkrjames" class="twitter" target="_blank" rel="noopener noreferrer">
-                    <svg id="icon-twitter" role="img" aria-label="Twitter Icon" style="width: 1.5rem; height: 1.5rem"
+                    <svg id="icon-twitter" role="img" aria-label="Twitter Icon" width="24" height="24"
                         viewbox="0 0 24 24">
                         <title>Twitter icon</title>
                         <use href="#twitter"></use>
