add analytics to lab & optimize tests

--- a/lab/buttons-custom-properties.html
+++ b/lab/buttons-custom-properties.html
@@ -60,8 +60,8 @@
 </head>
 
 <body>
-    <button>Enter</button>
-    <button class="brown">Enter</button>
+    <button data-analytics-element="Enter Button">Enter</button>
+    <button class="brown" data-analytics-element="Enter Button Brown">Enter</button>
 </body>
 
 </html>
