--- a/lab/framer-flows.html
+++ b/lab/framer-flows.html
@@ -121,7 +121,7 @@
         <div class="box-m"></div>
         <div class="box-s"></div>
     </div>
-    <button class="reset-btn" onclick="resetAnimation()">
+    <button class="reset-btn" data-analytics-element="Reset Animation" onclick="resetAnimation()">
         <span class="material-symbols-outlined">
             refresh
         </span>
