--- a/lab/framer-loaders.html
+++ b/lab/framer-loaders.html
@@ -290,7 +290,7 @@
         <div class='polygon bottom'></div>
     </div>
 
-    <button class="reset-btn" onclick="resetAnimation()">
+    <button class="reset-btn" data-analytics-element="Reset Animation" onclick="resetAnimation()">
         <span class="material-symbols-outlined">
             refresh
         </span>
