--- a/lab/google-loader.html
+++ b/lab/google-loader.html
@@ -50,7 +50,7 @@
 
 <body>
     <div class="container"></div>
-    <button class="reset-btn" onclick="resetAnimation()">
+    <button class="reset-btn" data-analytics-element="Reset Animation" onclick="resetAnimation()">
         <span class="material-symbols-outlined">
             refresh
         </span>
