--- a/lab/google-search-loader.html
+++ b/lab/google-search-loader.html
@@ -375,7 +375,7 @@
         <li class="item"></li>
     </ul>
 
-    <button class="reset-btn" onclick="resetAnimation()">
+    <button class="reset-btn" data-analytics-element="Reset Animation" onclick="resetAnimation()">
         <span class="material-symbols-outlined">
             refresh
         </span>
