--- a/lab/media-player-inline.html
+++ b/lab/media-player-inline.html
@@ -46,17 +46,17 @@
             </div>
 
             <div class="media-player-inline__controls">
-                <button class="media-player-inline__prev" title="Previous">
+                <button class="media-player-inline__prev" data-analytics-element="Previous" title="Previous">
                     <svg viewBox="0 -960 960 960">
                         <path d="M240-240v-480h80v480h-80Zm440 0L400-480l280-240v480Z" />
                     </svg>
                 </button>
-                <button class="media-player-inline__play" title="Play">
+                <button class="media-player-inline__play" data-analytics-element="Play" title="Play">
                     <svg viewBox="0 -960 960 960">
                         <path d="M320-200v-560l440 280-440 280Zm80-280Zm0 134 210-134-210-134v268Z" />
                     </svg>
                 </button>
-                <button class="media-player-inline__next" title="Next">
+                <button class="media-player-inline__next" data-analytics-element="Next" title="Next">
                     <svg viewBox="0 -960 960 960">
                         <path d="M640-240v-480h80v480h-80ZM280-240v-480l280 240-280 240Z" />
                     </svg>
@@ -70,7 +70,7 @@
             </div>
 
             <div class="media-player-inline__toggle">
-                <button class="media-player-inline__option" title="Shuffle/Options">
+                <button class="media-player-inline__option" data-analytics-element="Options" title="Shuffle/Options">
                     <svg viewBox="0 -960 960 960">
                         <path
                             d="M560-160v-80h164L531-433l56-56 193 193v-164h80v280H560Zm-344 0-56-56 193-193-193-193 56-56 193 193 193-193 56 56-193 193 193 193-56 56-193-193L216-160Z" />
