--- a/lab/media-player-lock-screen.html
+++ b/lab/media-player-lock-screen.html
@@ -340,13 +340,13 @@
 
     <section class="media-player-grid">
         <article class="media-player-grid__row">
-            <button class="grid-item--eq icon-btn--brand themed-background" title="Equalizer">
+            <button class="grid-item--eq icon-btn--brand themed-background" title="Equalizer" data-analytics-element="Equalizer">
                 <svg viewBox="0 -960 960 960" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M280-240v-480h80v480h-80ZM440-80v-800h80v800h-80ZM120-400v-160h80v160h-80Zm480 160v-480h80v480h-80Zm160-160v-160h80v160h-80Z" />
                 </svg>
             </button>
-            <button class="grid-item--phone icon-btn--brand themed-background" title="This Phone">
+            <button class="grid-item--phone icon-btn--brand themed-background" title="This Phone" data-analytics-element="This Phone">
                 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M17 1H7c-1.1 0-2 .9-2 2v18c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-2-2-2zm0 18H7V5h10v14z" />
@@ -358,14 +358,14 @@
                 <div class="media-player__meta__title">Loading...</div>
                 <div class="media-player__meta__artist">...</div>
             </div>
-            <button class="media-player__play-pause themed-background" title="Play">
+            <button class="media-player__play-pause themed-background" title="Play" data-analytics-element="Play">
                 <svg viewBox="0 -960 960 960">
                     <path d="M320-200v-560l440 280-440 280Zm80-280Zm0 134 210-134-210-134v268Z" />
                 </svg>
             </button>
         </article>
         <article class="media-player-grid__row">
-            <button class="media-player__prev" title="Previous">
+            <button class="media-player__prev" title="Previous" data-analytics-element="Previous">
                 <svg viewBox="0 -960 960 960">
                     <path d="M240-240v-480h80v480h-80Zm440 0L400-480l280-240v480Z" />
                 </svg>
@@ -373,18 +373,18 @@
             <div class="media-player__progress">
                 <input type="range" class="progress-slider" min="0" max="100" value="0">
             </div>
-            <button class="media-player__next" title="Next">
+            <button class="media-player__next" title="Next" data-analytics-element="Next">
                 <svg viewBox="0 -960 960 960">
                     <path d="M640-240v-480h80v480h-80ZM280-240v-480l280 240-280 240Z" />
                 </svg>
             </button>
-            <button class="media-player__rewind" title="Rewind 10s">
+            <button class="media-player__rewind" title="Rewind 10s" data-analytics-element="Rewind">
                 <svg viewBox="0 -960 960 960">
                     <path
                         d="M480-80q-75 0-140.5-28.5t-114-77q-48.5-48.5-77-114T120-440h80q0 117 81.5 198.5T480-160q117 0 198.5-81.5T760-440q0-117-81.5-198.5T480-720h-6l62 62-56 58-160-160 160-160 56 58-62 62h6q75 0 140.5 28.5t114 77q48.5 48.5-77 114T840-440q0 75-28.5 140.5t-77 114q-48.5 48.5-114 77T480-80ZM360-320v-180h-60v-60h120v240h-60Zm140 0q-17 0-28.5-11.5T460-360v-160q0-17 11.5-28.5T500-560h80q17 0 28.5 11.5T620-520v160q0 17-11.5 28.5T580-320h-80Zm20-60h40v-120h-40v120Z" />
                 </svg>
             </button>
-            <button class="media-player__option" title="Random (Mode)">
+            <button class="media-player__option" title="Random (Mode)" data-analytics-element="Random">
                 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M10.59 9.17L5.41 4 4 5.41l5.17 5.17 1.42-1.41zM14.5 4l2.04 2.04L4 18.59 5.41 20 17.96 7.45 20 9.5V4h-5.5zm.59 11.59l-1.41-1.41-1.42 1.41 1.42 1.41 1.41-1.41z" />
@@ -394,7 +394,7 @@
         <div class="media-player__equalizer">
             <div class="eq-header">
                 <h3>Equalizer</h3>
-                <button class="eq-close" title="Close">
+                <button class="eq-close" title="Close" data-analytics-element="Close">
                     <svg viewBox="0 -960 960 960">
                         <path
                             d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
