--- a/lab/microsoft-logo.html
+++ b/lab/microsoft-logo.html
@@ -119,7 +119,7 @@
         <div class='box toLeft' style='--bg: hsl(199.1, 95.9%, 48.2%)'></div>
         <div class='box toBottom' style='--bg: hsl(43.5, 100%, 50.8%)'></div>
     </section>
-    <button class="reset-btn" onclick="resetAnimation()">
+    <button class="reset-btn" data-analytics-element="Reset Animation" onclick="resetAnimation()">
         <span class="material-symbols-outlined">
             refresh
         </span>
