--- a/lab/media-player-widget.html
+++ b/lab/media-player-widget.html
@@ -80,7 +80,7 @@
             <div class="media-player__meta__title">Loading...</div>
             <div class="media-player__meta__artist">...</div>
         </div>
-        <button class="media-player__current" title="Current Track">
+        <button class="media-player__current" title="Current Track" data-analytics-element="Current Track">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
                 <path
                     d="M400-120q-66 0-113-47t-47-113q0-66 47-113t113-47q23 0 42.5 5.5T480-418v-422h240v160H560v400q0 66-47 113t-113 47Z" />
@@ -88,32 +88,32 @@
         </button>
 
         <div class="media-player__controls">
-            <button class="media-player__dislike" title="Dislike">
+            <button class="media-player__dislike" title="Dislike" data-analytics-element="Dislike">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
                     <path transform="rotate(180 480 -480)"
                         d="M720-120H280v-520l280-280 50 50q7 7 11.5 19t4.5 23v14l-44 174h258q32 0 56 24t24 56v80q0 7-2 15t-4 15L794-168q-9 20-30 34t-44 14Zm-360-80h360l120-280v-80H480l54-220-174 174v406Zm0-406v406-406Zm-80-34v80H160v360h120v80H80v-520h200Z" />
                 </svg>
             </button>
 
-            <button class="media-player__prev" title="Previous">
+            <button class="media-player__prev" title="Previous" data-analytics-element="Previous">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
                     <path d="M240-240v-480h80v480h-80Zm440 0L400-480l280-240v480Z" />
                 </svg>
             </button>
 
-            <button class="media-player__play" title="Play">
+            <button class="media-player__play" title="Play" data-analytics-element="Play">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
                     <path d="M320-200v-560l440 280-440 280Zm80-280Zm0 134 210-134-210-134v268Z" />
                 </svg>
             </button>
 
-            <button class="media-player__next" title="Next">
+            <button class="media-player__next" title="Next" data-analytics-element="Next">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
                     <path d="M640-240v-480h80v480h-80ZM280-240v-480l280 240-280 240Z" />
                 </svg>
             </button>
 
-            <button class="media-player__like" title="Like">
+            <button class="media-player__like" title="Like" data-analytics-element="Like">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
                     <path
                         d="M720-120H280v-520l280-280 50 50q7 7 11.5 19t4.5 23v14l-44 174h258q32 0 56 24t24 56v80q0 7-2 15t-4 15L794-168q-9 20-30 34t-44 14Zm-360-80h360l120-280v-80H480l54-220-174 174v406Zm0-406v406-406Zm-80-34v80H160v360h120v80H80v-520h200Z" />
