--- a/lab.html
+++ b/lab.html
@@ -183,6 +183,7 @@
   </footer>
   <script src="scripts/copyright.js" defer></script>
   <script src="scripts/lab-analytics.js" type="module" defer></script>
+  <script src="scripts/analytics.js" type="module" defer></script>
   <script src="scripts/register-sw.js" defer></script>
 </body>
 
