update:sw cache & favicon

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     <link rel="preload" href="styles/main.css" as="style" />
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="icon" type="image/svg+xml" href="images/icon.svg" />
+    <link rel="apple-touch-icon" href="/images/icon-ios.svg" />
+    <link rel="icon" type="image/png" href="/favicon_144.png" sizes="144x144" />
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="144x144" />
+    <link rel="icon" type="image/png" href="/favicon_512.png" sizes="512x512" />
+    <link rel="icon" type="image/png" href="/favicon_192.png" sizes="192x192" />
     <link rel="manifest" href="manifest.json" />
 </head>
 
