--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image:alt" content="Robert James" />
     <link rel="preload" href="fonts/recursive-variable.woff2" as="font" type="font/woff2" crossorigin />
-    <link rel="stylesheet" href="styles/fonts.css" />
+    <style>
+        @font-face {
+            font-family: "Recursive";
+            font-style: normal;
+            font-weight: 400 900;
+            font-display: swap;
+            src: url("fonts/recursive-variable.woff2") format("woff2-variations");
+            unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
+                U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+                U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+        }
+    </style>
     <link rel="preload" href="styles/main.css" as="style" />
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="icon" type="image/svg+xml" href="images/icon.svg" />
