--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
   <meta name="Description"
     content="Robert James - A UX Engineer who designs and builds digital experiences and products" />
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; script-src 'self' https://www.googletagmanager.com https://static.cloudflareinsights.com 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com data:; img-src 'self' https://assets.codepen.io data:; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://www.google-analytics.com https://cloudflareinsights.com https://static.cloudflareinsights.com; object-src 'none'; frame-src 'self'; base-uri 'self'; upgrade-insecure-requests;" />
+    content="default-src 'self'; script-src 'self' https://www.googletagmanager.com https://static.cloudflareinsights.com 'unsafe-inline'; style-src 'self' 'unsafe-inline' data:; img-src 'self' https://assets.codepen.io data:; font-src 'self'; connect-src 'self' https://www.google-analytics.com https://cloudflareinsights.com https://static.cloudflareinsights.com; object-src 'none'; frame-src 'self'; base-uri 'self'; upgrade-insecure-requests;" />
   <meta name="referrer" content="strict-origin-when-cross-origin" />
   <title>Resume | Portfolio</title>
   <meta property="og:title" content="Robert James" />
@@ -23,17 +23,23 @@
   <meta property="og:site_name" content="Robert James" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image:alt" content="Robert James" />
+  <link rel="preload" href="fonts/recursive-variable.woff2" as="font" type="font/woff2" crossorigin />
+  <style>
+    @font-face {
+      font-family: "Recursive";
+      font-style: normal;
+      font-weight: 400 900;
+      font-display: swap;
+      src: url("fonts/recursive-variable.woff2") format("woff2-variations");
+      unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
+        U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+        U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    }
+  </style>
   <link rel="preload" href="styles/main.css" as="style">
   <link rel="stylesheet" href="styles/main.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://www.google-analytics.com">
   <link rel="dns-prefetch" href="https://www.googletagmanager.com">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Recursive:wght,CASL,CRSV,MONO@400..900,0..1,0..1,0..1&display=swap"
-    rel="stylesheet">
-  <link rel="preload" href="styles/main.css" as="style">
-  <link rel="stylesheet" href="styles/main.css">
   <link rel="icon" type="image/svg+xml" href="images/icon.svg">
   <link rel="apple-touch-icon" href="/images/icon-ios.svg">
   <link rel="icon" type="image/png" href="/favicon_144.png" sizes="144x144">
