unified skip to link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 
 <body>
-    <a href="#about" class="skip-to-content">Skip to content</a>
+    <a href="#main-content" class="skip-to-content">Skip to content</a>
     <svg class="icon-set">
         <symbol id="twitter">
             <title>Social-Icon Twitter</title>
@@ -87,7 +87,7 @@
             </ul>
         </nav>
     </header>
-    <main id="about" data-analytics-section="About">
+    <main id="main-content" data-analytics-section="About">
         <div class="cover about">
             <p class="about-item">
                 <span class="headline">I'm a UX Engineer who designs and builds digital experiences and products.</span>
